<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ffffff">
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="10dp">

            </androidx.viewpager.widget.ViewPager>

            <TextView
                android:id="@+id/txtViewProductName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/string_productName"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/decribe"
                android:textSize="17sp"
                android:text="@string/string_describePDetail"
                android:fontFamily="cursive"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollHorizontally="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="start"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:gravity="start"
                    android:id="@+id/txtViewProductPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/string_productPrice"
                    android:textColor="#000000"
                    android:textSize="27sp"/>

                <Button
                    android:id="@+id/btnProductSizeS"
                    android:layout_width="45dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_marginStart="6dp"
                    android:background="@drawable/product_detail_button"
                    android:text="@string/string_sizeS"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/btnProductSizeM"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="6dp"
                    android:layout_margin="10dp"
                    android:background = "@drawable/product_detail_button"
                    android:text="@string/string_sizeM"
                    android:textColor="#ffffff"/>

                <Button
                    android:id="@+id/btnProductSizeB"
                    android:layout_width="55dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_margin="10dp"
                    android:background = "@drawable/product_detail_button"
                    android:text="@string/string_sizeB"
                    android:textColor="#ffffff"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="start"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner"
                    android:background="@drawable/product_detail_spinner"
                    android:padding="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    />

                <Button
                    android:id="@+id/btnAddCart0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/product_detail_button"
                    android:text="@string/string_btnAddCart"
                    android:textAlignment="center"
                    android:layout_marginEnd="10dp"
                    android:textColor="#ffffff"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sản phẩm liên quan"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:textSize="23sp"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ListView
                    android:layout_width="match_parent"
                    android:id="@+id/listProductDetail"
                    android:layout_height="match_parent">
                </ListView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAddCart1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/product_detail_button"
                    android:text="@string/string_btnAddCart"
                    android:textColor="#ffffff" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>


