<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/activity_main_drawer1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/LL1"
                tools:ignore="MissingConstraints">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="1dp"
                app:layout_constraintTop_toBottomOf="@id/LL1"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="MissingConstraints"
                android:layout_height="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="190dp"
                        android:contentDescription="@string/introduce"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/img1" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:includeFontPadding="true"
                        android:layout_margin="10dp"
                        android:text="NEW COLLECTION"
                        android:textColor="@color/colorPrimary"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="20dp">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/LL2"
                            android:orientation="vertical">
                            <ImageView
                                android:id="@+id/imageView1"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/img2"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:contentDescription="@string/product"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/prd1"
                                android:gravity="center">
                            </TextView>
                            <Space
                                android:layout_width="match_parent"
                                android:layout_height="20dp"/>
                            <ImageView
                                android:id="@+id/img3"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/img3"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:contentDescription="@string/product"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/prd5"
                                android:gravity="center">
                            </TextView>

                            <Space
                                android:layout_width="match_parent"
                                android:layout_height="20dp"/>

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/img4"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:contentDescription="@string/product"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/prd6"
                                android:gravity="center">
                            </TextView>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/LL3"
                            android:orientation="vertical"
                            android:layout_marginEnd="20dp">
                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/img5"
                                android:contentDescription="@string/product"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/prd2"
                                android:gravity="center">
                            </TextView>
                            <Space
                                android:layout_width="match_parent"
                                android:layout_height="20dp"/>
                            <ImageView
                                android:id="@+id/imageView6"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/img6"
                                android:contentDescription="@string/product"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/prd4"
                                android:gravity="center">
                            </TextView>

                            <Space
                                android:layout_width="match_parent"
                                android:layout_height="20dp"/>

                            <ImageView
                                android:id="@+id/imageView7"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/img7"
                                android:contentDescription="@string/product"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/prd7"
                                android:gravity="center">
                            </TextView>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="vertical">

                <!-- Header -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/colorPrimary"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark">

                    <ImageView
                        android:id="@+id/activity_main_imv_avatar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        app:srcCompat="@mipmap/ic_launcher_round" />

                    <TextView
                        android:id="@+id/activity_main_tv_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="Yellow Code"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:id="@+id/activity_main_tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="yellowcode.books@gmail.com" />

                </LinearLayout>

                <!-- Item Info -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="3dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_launcher_background" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:text="menu_item_about_app" />

                </LinearLayout>

                <!-- Item Help -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:src="@drawable/ic_info_foreground" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:text="menu_item_help" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>
</LinearLayout>
